Beacon integration 1. Beacon 2. Scanning the foreground apps 3. Locking functionality

--- a/app/src/main/res/layout/fragment_group_add_member.xml
+++ b/app/src/main/res/layout/fragment_group_add_member.xml
@@ -33,4 +33,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/btnSignOut"/>
 
+    <Switch
+        android:text="Family"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sFamily" />
+
 </LinearLayout>
