--- a/app/src/main/res/layout/fragment_group_add_member.xml
+++ b/app/src/main/res/layout/fragment_group_add_member.xml
@@ -1,10 +1,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="sociallockinvite.anything.com.sociallock.View.GroupAddMember">
+
+    <ImageView
+        android:layout_width="180sp"
+        android:layout_height="180sp"
+
+        app:srcCompat="@drawable/sociallock"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"/>
 
     <EditText
         android:layout_width="match_parent"
